Adicionado a função de consulta e melhorias no CSS e outros

--- a/frontend/src/template/custom.css
+++ b/frontend/src/template/custom.css
@@ -6,3 +6,11 @@
     text-decoration: line-through;
     color: #777;
 }
+
+.tableActions {
+    width: 200px;
+}
+
+.trelForm {
+    padding-bottom: 80px;
+}
